c5 - alterando parágrafo do autor e inserindo na home

--- a/autor.html
+++ b/autor.html
@@ -2,7 +2,7 @@
     <body>
         <h2>Sobre o autor:</h2>
 
-        <p>Meu nome é Felipe Lima</p>
+        <p>Meu nome é Felipe Lima e sou engenheiro</p>
     </body>
 
 
