c9 - criando uma lista de cursos

--- a/home.html
+++ b/home.html
@@ -3,6 +3,10 @@
         <h2>Meu curso:</h2>
         <a href="autor.html">autor</a>
         <img src="img/dog.png" />
+        <ul>
+            <li>Curso avançado de git</li>
+            <li>Curso avançado de HTML</li>
+        </ul>
     </body>
 
 
