c10 - inserindo novo curso de CSS

--- a/home.html
+++ b/home.html
@@ -2,10 +2,13 @@
     <body>
         <h2>Meu curso:</h2>
         <a href="autor.html">autor</a>
+        <a href="alunos.html">alunos</a>
+        
         <img src="img/dog.png" />
         <ul>
             <li>Curso avançado de git</li>
             <li>Curso avançado de HTML</li>
+            <li>Curso avançado de CSS</li>
         </ul>
     </body>
 
