--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
         <ul>
             <li>Curso avançado de git</li>
             <li>Curso avançado de HTML</li>
-            <li>Curso avançado de CSS</li>
+            <li>Curso avançado de pyton</li>
         </ul>
     </body>
 
